--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "redis",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js",
-    "redisdev": "nodemon server.js",
-    "redisstart": "node server.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/express": "^4.17.17",
-    "@types/node": "^18.14.0",
-    "axios": "^0.27.2",
-    "express": "^4.18.1",
-    "redis": "^4.2.0"
-  }
+    "name": "redis",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "start": "node build/app.js",
+        "dev": "npx concurrently \"tsc --watch\" \"nodemon build/app.js\"",
+        "redisdev": "npx concurrently \"tsc --watch\" \"nodemon build/server.js\"",
+        "redisstart": "node build/server.js"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@types/axios": "^0.14.0",
+        "@types/express": "^4.17.17",
+        "@types/node": "^18.14.0",
+        "axios": "^0.27.2",
+        "express": "^4.18.1",
+        "redis": "^4.2.0"
+    }
 }
